<resources>
    <string name="app_name">Ssmarty</string>
    <string name="nfc_state_shower">NFC state shower</string>
    <string name="nfc_SUBT">SSMARTY</string>
    <string name="activer_la_fonctionalit_nfc_pour_se_biper_votre_carte">Activer la fonctionalité NFC pour se biper votre Carte</string>
    <string name="ntc_activE">NFC Activé</string>
    <string name="veuill_activE_Nfc">Veuillez activer votre NFC</string>
    <string name="horaire">Horaire</string>
    <string name="horaire_d_examens">Epreuve</string>
    <string name="communication_de_l_universit">Communication de l\'université</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_aliquam_rutrum_convallis_justo_faucibus_condimentum_massa_mollis_id_vestibulum_tempor_elementum_est_vel_vestibulum_nulla_facilisi_maecenas_eget_tristique_lorem_aliquam_leo_arcu_tempor_quis_neque_vel_rhoncus_interdum_neque_aliquam_interdum_consectetur_massa_at_dignissim_suspendisse_pharetra_erat_sed_consectetur_porta_ante_ante_auctor_dui_id_pellentesque_tortor_odio_vel_mi_suspendisse_mattis_arcu_nec_sodales_vestibulum_curabitur_erat_orci_finibus_a_dictum_a_interdum_in_eros_duis_turpis_turpis_maximus_quis_nisl_vitae_vestibulum_imperdiet_nisi_vestibulum_eu_enim_eu_est_rhoncus_pulvinar_nulla_vel_tortor_non_diam_cursus_vulputate">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum convallis justo, faucibus condimentum massa mollis id. Vestibulum tempor elementum est vel vestibulum. Nulla facilisi. Maecenas eget tristique lorem. Aliquam leo arcu, tempor quis neque vel, rhoncus interdum neque. Aliquam interdum consectetur massa at dignissim. Suspendisse pharetra, erat sed consectetur porta, ante ante auctor dui, id pellentesque tortor odio vel mi. Suspendisse mattis arcu nec sodales vestibulum. Curabitur erat orci, finibus a dictum a, interdum in eros. Duis turpis turpis, maximus quis nisl vitae, vestibulum imperdiet nisi. Vestibulum eu enim eu est rhoncus pulvinar. Nulla vel tortor non diam cursus vulputate.</string>
    <string name="mes_listes_de_pr_sence_enregistr_es">Mes listes de présence enregistrées</string>
    <string name="contact_de_l_universit">Contact de l\'Université</string>
    <string name="lancer_une_liste_pr_sence">Présence</string>
    <string name="v_rifier_mes_listes_de_pr_sence">Mes listes</string>
    <string name="contacter_l_universit">Univ.</string>
    <string name="r_diger_une_communication">Message</string>
    <string name="country_prompt">Choisir</string>
    <string name="autre_raison">Autre raison</string>
    <string name="message_all_students">Message à tout les étudiants </string>
    <string name="mon_message_pour_la_fac_d_partement">Mon message à Fac/Département</string>
    <string name="objet_du_message">Objet du message</string>
    <string name="d_stination">Déstination</string>
    <string name="nom_xpediteur">Nom éxpediteur</string>
    <string name="nom_de_l_univ">Nom de l\'univ</string>
    <string name="univ_gmail_com">univ@gmail.com</string>
    <string name="_243972518932">+243972518932</string>
    <string name="todo">TODO</string>
    <string name="nom_du_cours_ex_intro">Nom du cours (Ex : Intro à ...</string>
    <string-array name="typeListePresence">
        <item>Cours</item>
        <item>Interrogation</item>
        <item>Examen</item>
        <item>Autre</item>
    </string-array>
    <string-array name="Fac">
        <item>Département - Fac</item>
    </string-array>
    <string-array name="AjoutHoraire">
        <item>Cours</item>
        <item>Interrogation</item>
        <item>Examen</item>
    </string-array>
    <string-array name="typeListepromo">
        <item>Choisir la promotion</item>
        <item>Prépa</item>
        <item>G1</item>
        <item>G2</item>
        <item>G3</item>
        <item>L1</item>
        <item>L2</item>
        <item>Msc 1</item>
        <item>Msc 2</item>
    </string-array>

</resources>
